# post-aggregators

./: .gitignore  README.md  TODO.md
discord/: entrypoint.sh  pyproject.toml  requirements.txt
discord/aggregator/: bot.py  settings.py
discord/aggregator/database/: setup.py  tables.py
discord/aggregator/ext/development/: extension.py
discord/aggregator/ext/transformer/: __init__.py  data.py  extension.py  llm.py
discord/aggregator/ext/utils/: extension.py
