[tool.poetry]
name = "discord-aggregator"
version = "0.1.0"
description = ""
authors = [
    "corgi-in-tights <59304120+corgi-in-tights@users.noreply.github.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
groq = "^0.11.0"
aiohttp = "^3.10.10"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
sqlalchemy = "^2.0.38"
aiosqlite = "^0.21.0"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
fix = true
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "S311"
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
